# Intelli_PEST-KnowledgeDistillation

./: .gitignore  README.md  analyze_models.py  deploy_rotation_robust_model.py  expand_model_properly.py  finetune_rotation_robust.py  finish_training.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_api_comprehensive.py  test_checkpoint.json  test_expanded_model.py  test_results.json  test_rotation_api.py  train.py  train_sequential.py  training_report.json  tunnel_monitor.py
.github/workflows/: ci.yml
configs/: class_mapping.json  config.yaml  training_config.yaml
metrics/: final_evaluation.json
metrics/metrics/: final_confusion_matrix_raw.npy
src/: __init__.py  dataset.py  enhanced_student_model.py  evaluator.py  exporter.py  sequential_trainer.py  student_model.py  teacher_loader.py  trainer.py
